--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "gh-pages": "^5.0.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
